[tool.poetry]
name = "crunchylink"
version = "0.1.0"
description = "Crunchyroll specific wrapper for streamlink"
authors = ["David Buckley <buckley.w.david@gmail.com>"]
license = "MIT"

readme = 'README.md'
repository = "https://github.com/buckley-w-david/crunchylink"
homepage = "https://github.com/buckley-w-david/crunchylink"

[tool.poetry.dependencies]
python = "^3.6"
crunchy-api = "^0.2.0"
click = "^6.7"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
crunchylink = 'crunchylink.cli:main'
